📝 (App.css): Update overflow property in .app class to only hide horizontal overflow 📝 (Button.module.css): Change display property in .button class to inline-block for better layout 📝 (DemoInvitation.module.css): Adjust padding in .demo-invitation class and update margin-top in .demo-invitation__content class for improved styling 📝 (DemoInvitation.tsx): Uncomment image import and fix img tag formatting in DemoInvitation component

--- a/src/App.css
+++ b/src/App.css
@@ -44,5 +44,5 @@ h3 {
 
 .app {
   min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
