--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .button {
-  display: block;
+  display: inline-block;
   font-weight: bold;
   font-size: 16px;
   line-height: 32px;
