--- a/src/components/DemoInvitation/DemoInvitation.module.css
+++ b/src/components/DemoInvitation/DemoInvitation.module.css
@@ -1,6 +1,9 @@
 .demo-invitation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: white;
-  padding: 0 16px;
+  padding: 200px 16px 0;
   width: 100%;
   height: 200px;
 }
@@ -11,7 +14,7 @@
 }
 
 .demo-invitation__content {
-  margin-top: 120px;
+  margin-top: -50px;
   background-color: var(--primary-color);
   padding: 32px;
   color: white;
